done with draft 1 html

--- a/index.html
+++ b/index.html
@@ -44,8 +44,12 @@
   </div>
   <div class="container">
    <h2> Post your score! </h2>
-
+    <a href="www.facebook.com"><img src="#"></a>
+    <a href="www.twitter.com"><img src="#"></a>
   </div>
+  <footer class="info">
+    <h3>copyright 2013</h3>
+  </footer>
 
 </body>
 </html>
